--- a/about.html
+++ b/about.html
@@ -33,9 +33,10 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-3 order-2 order-sm-1">
 					<div class="header__social">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+								class="fa fa-linkedin-square"></i></a>
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
@@ -57,14 +58,14 @@
 					<li><a href="./about.html" class="menu--active">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red & Coral</a></li>
-							<li><a href="./gallery2.html">White Roses</a></li>
-							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
-							<li><a href="./gallery5.html">Green</a></li>
-							<li><a href="./gallery6.html">Lavender</a></li>
-							<li><a href="./gallery7.html">Bicolor</a></li>
-							<li><a href="./gallery8.html">Tinted</a></li>
+							<li><a href="./gallery1.html"> • Red & Coral</a></li>
+							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html"> • Green</a></li>
+							<li><a href="./gallery6.html"> • Lavender</a></li>
+							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -102,7 +103,7 @@
 				  <!-- Title -->
 				  <a href="#!" class="black-text"> Our Social commitment</a>
 				  <!-- Text -->
-				  <p class="card-title text-muted font-small mt-3 mb-2">The wealth of our workers is our priority, we are thankful with their daily work and we are proud of our team</p>
+				  <p class="card-title text-muted font-small mt-3 mb-2">The wealth of our workers is our priority. <br> We focus on providing the best working conditions. We are thankful with their daily work and we are proud of our team. </p>
 				  <!-- <button type="button" class="btn btn-flat text-primary p-0 mx-0">Read more<i class="fa fa-angle-right ml-2"></i></button> -->
 				</div>
 	  
@@ -127,7 +128,9 @@
 				  <!-- Title -->
 				  <a href="#!" class="black-text">Environmental sustainability</a>
 				  <!-- Text -->
-				  <p class="card-title text-muted font-small mt-3 mb-2">We are committed to delivering the best possible product without generating a negative impact on the environment. Proof of this is our effort to reduce the use of pollutants. We are certified with Rainforest</p>
+				  <p class="card-title text-muted font-small mt-3 mb-2">We are committed to delivering the best possible product without generating a negative impact on the environment. 
+				<br>
+					Proof of this is our effort to reduce the use of pollutants. We are certified with Rainforest</p>
 				  
 				</div>
 	  
@@ -152,7 +155,8 @@
 				  <!-- Title -->
 				  <a href="#!" class="black-text">Excellence & Quality</a>
 				  <!-- Text -->
-				  <p class="card-title text-muted font-small mt-3 mb-2">Our procedures are strictly monitored to maintain the highest quality standards. We have been awarded for our passion and quaility delivery. Proflora 2019 - Awarded 1st, 2nd & 3rd</p>  
+				  <p class="card-title text-muted font-small mt-3 mb-2">Our procedures are strictly monitored to maintain the highest quality standards.  <br>
+					  We have been awarded for our passion and quaility delivery. Proflora 2019 - Awarded 1st, 2nd & 3rd place.</p>  
 				</div>
 	  
 			  </div>
@@ -198,7 +202,7 @@
 			  <p class="font-weight-bold">The legacy of passion</p>
 	
 			  <p class="text-muted">For over 30 years, we have been growing fresh cut roses for the worldwide market. We are focused in Direct Store Delivery programs orientated to markets and retail locations that want to offer freshness and quality roses to their customers, by having our products delivered at their stores directly from our farms, located in Colombia.
-				Our roses are certified under third party sustainability protocols such as Rainforest Alliance and  SMETA - Sedex audits</p>
+				Our roses are certified under third party sustainability protocols such as Rainforest Alliance and  SMETA - Sedex audits.</p>
 	
 			  <a class="font-weight-bold" href="blog-single.html" >Learn more > </a>
 	
@@ -234,15 +238,16 @@
 
 						<!-- Facebook -->
 						<a class="fb-ic">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-						</a>
-						<!-- Twitter -->
-						<a class="tw-ic">
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
 						</a>
 						<!--Instagram-->
 						<a class="ins-ic">
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</a>
+
+						<a class="ins-ic">
+							<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+									class="fa fa-linkedin-square"></i></a>
 						</a>
 
 					</div>
@@ -264,9 +269,9 @@
 				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
 					<!-- Content -->
-					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<h6 class="text-uppercase font-weight-bold">Bella Flowers</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+					<p>We are the wonderful company where people and flowers bloom.</p>
 
 				</div>
 				<!-- Grid column -->
@@ -277,39 +282,25 @@
 					<!-- Links -->
 					<h6 class="text-uppercase font-weight-bold">Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Red Roses</a></p>
-					<p><a href="#!">Pink Roses</a></p>
-					<p><a href="#!">Yellow Roses</a></p>
-					<p><a href="#!">Eco Roses</a></p>
+					<p><a href="gallery1.html">Red roses</a></p>
+					<p><a href="gallery4.html">Yellow roses</a></p>
+					<p><a href="gallery7.html">Bicolor</a></p>
+					<p><a href="gallery.html">All our roses</a></p>
 
 				</div>
-				<!-- Grid column -->
-
-				<!-- Grid column -->
-				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Your Account</a></p>
-					<p><a href="#!">Become an Affiliate</a></p>
-					<p><a href="#!">Shipping Rates</a></p>
-					<p><a href="#!">Help</a></p>
-
-				</div>
-				<!-- Grid column -->
 
 				<!-- Grid column -->
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Contact</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-					<p>	<i class="fas fa-envelope mr-3"></i> info@bella.com</p>
-					<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-					<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
 
+					<h6 class="text-uppercase font-weight-bold">Contact</h6>
+					<hr class="deep-purple accent-2 mb- mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp; &nbsp;Doral-Fl 33172
+					</p>
+					<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
+					<p><i class="fa fa-phone-square"></i> US + 305-900-3793 </p>
+					<p><i class="fa fa-phone-square"></i> COL + 57 315 6944600</p>
 				</div>
 				<!-- Grid column -->
 
@@ -322,14 +313,13 @@
 		<!-- Copyright -->
 		<div class="footer__section">
 			<div class="container">
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<!--- Template is licensed under CC BY 3.0. -->
 				<div class="footer__copyright__text">
-					<p>BellaFlowers &copy; <script>
+					<p>Bella Flowers &copy; <script>
 							document.write(new Date().getFullYear());
-						</script> All rights reserved | This template is made with <i class="fa fa-heart"
-							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
+						</script> All rights reserved</p>
+
 				</div>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
 		</div>
 		<!-- Copyright  -->
