--- a/blog-single.html
+++ b/blog-single.html
@@ -36,9 +36,10 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-3 order-2 order-sm-1">
 					<div class="header__social">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+								class="fa fa-linkedin-square"></i></a>
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
@@ -104,8 +105,8 @@
 			</div>
 	</article>
 	<div class="blog__container">
-		<p>Bella Flowers - as an employer is aware of the important social role a fundamental part of the flower
-			industry, which is why our motivation and commitment to our employees is to provide and ensure fair
+		<p> As employers we are aware of our important social role, a fundamental part of the flower
+			industry, which is our motivation and commitment to our employees is to provide and ensure fair
 			treatment and good working conditions, training programs continue under strict social responsibility and
 			environmental care.</p>
 	</div>
@@ -125,13 +126,12 @@
 		</div>
 	</div>
 
-	<div class="mb-4 blog__container">
+	<div class="blog__container mb-5">
 		<h4>Sustainability policies</h4>
 		<br>
 		<p>
 			We have social, environmental and occupational health policies and programs giving each of these
-			issues
-			all the necessary importance.
+			issues all the necessary importance.
 			Our social responsibility policy provides support to our employees’ medical and dental services,
 			counseling in family welfare and health all these services extended to their family groups for the
 			sole purpose of improving their living conditions, our company also offers employees transportation
@@ -161,15 +161,16 @@
 
 						<!-- Facebook -->
 						<a class="fb-ic">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-						</a>
-						<!-- Twitter -->
-						<a class="tw-ic">
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
 						</a>
 						<!--Instagram-->
 						<a class="ins-ic">
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</a>
+
+						<a class="ins-ic">
+							<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+									class="fa fa-linkedin-square"></i></a>
 						</a>
 
 					</div>
@@ -191,9 +192,9 @@
 				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
 					<!-- Content -->
-					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<h6 class="text-uppercase font-weight-bold">Bella Flowers</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+					<p>We are the wonderful company where people and flowers bloom.</p>
 
 				</div>
 				<!-- Grid column -->
@@ -204,27 +205,12 @@
 					<!-- Links -->
 					<h6 class="text-uppercase font-weight-bold">Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Red Roses</a></p>
-					<p><a href="#!">Pink Roses</a></p>
-					<p><a href="#!">Yellow Roses</a></p>
-					<p><a href="#!">Eco Roses</a></p>
+					<p><a href="gallery1.html">Red roses</a></p>
+					<p><a href="gallery4.html">Yellow roses</a></p>
+					<p><a href="gallery7.html">Bicolor</a></p>
+					<p><a href="gallery.html">All our roses</a></p>
 
 				</div>
-				<!-- Grid column -->
-
-				<!-- Grid column -->
-				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Your Account</a></p>
-					<p><a href="#!">Become an Affiliate</a></p>
-					<p><a href="#!">Shipping Rates</a></p>
-					<p><a href="#!">Help</a></p>
-
-				</div>
-				<!-- Grid column -->
 
 				<!-- Grid column -->
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -232,12 +218,12 @@
 					<!-- Links -->
 
 					<h6 class="text-uppercase font-weight-bold">Contact</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><i class="fa fa-location-arrow"></i> New York, NY 10012, US</p>
-					<p><i class="fa fa-inbox"></i> info@bella.com</p>
-					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
-					<p><i class="fa fa-phone-square"></i> + 01 234 567 88</p>
-
+					<hr class="deep-purple accent-2 mb- mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp; &nbsp;Doral-Fl 33172
+					</p>
+					<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
+					<p><i class="fa fa-phone-square"></i> US + 305-900-3793 </p>
+					<p><i class="fa fa-phone-square"></i> COL + 57 315 6944600</p>
 				</div>
 				<!-- Grid column -->
 
@@ -250,18 +236,17 @@
 		<!-- Copyright -->
 		<div class="footer__section">
 			<div class="container">
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				<div class="footer__copyright__text">
-					<p>BellaFlowers &copy; <script>
+					<p>Bella Flowers &copy; <script>
 							document.write(new Date().getFullYear());
-						</script> All rights reserved | This template is made with <i class="fa fa-heart"
-							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a>
-					</p>
+						</script> All rights reserved</p>
 				</div>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
 		</div>
+		<!-- Copyright  -->
+
 	</footer>
+	<!-- Footer  End-->
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
