--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,6 @@
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
 
-
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
 </head>
 
 <body>
@@ -34,9 +28,10 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-3 order-2 order-sm-1">
 					<div class="header__social">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+								class="fa fa-linkedin-square"></i></a>
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
@@ -93,10 +88,9 @@
 						</div>
 					</div>
 					<div class="contact__social">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.instagram.com/" target="_blank" ><i class="fa fa-instagram"></i></a>
+						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i class="fa fa-linkedin"></i></a>
 					</div>
 
 
@@ -114,13 +108,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- <form class="contact__form">
-				<input type="text" placeholder="Name">
-				<input type="text" placeholder="Email">
-				<input type="text" placeholder="Phone">
-				<textarea placeholder="Message"></textarea>
-				<button class="site-btn">Send Message</button>
-			</form> -->
+	
 		</div>
 	</section>
 	<!-- Contact Page end -->
@@ -143,15 +131,16 @@
 
 						<!-- Facebook -->
 						<a class="fb-ic">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-						</a>
-						<!-- Twitter -->
-						<a class="tw-ic">
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
 						</a>
 						<!--Instagram-->
 						<a class="ins-ic">
-							<a href="#"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</a>
+
+						<a class="ins-ic">
+							<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+									class="fa fa-linkedin-square"></i></a>
 						</a>
 
 					</div>
@@ -173,9 +162,9 @@
 				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
 					<!-- Content -->
-					<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
+					<h6 class="text-uppercase font-weight-bold">Bella Flowers</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
+					<p>We are the wonderful company where people and flowers bloom.</p>
 
 				</div>
 				<!-- Grid column -->
@@ -186,39 +175,25 @@
 					<!-- Links -->
 					<h6 class="text-uppercase font-weight-bold">Products</h6>
 					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Red Roses</a></p>
-					<p><a href="#!">Pink Roses</a></p>
-					<p><a href="#!">Yellow Roses</a></p>
-					<p><a href="#!">Eco Roses</a></p>
+					<p><a href="gallery1.html">Red roses</a></p>
+					<p><a href="gallery4.html">Yellow roses</a></p>
+					<p><a href="gallery7.html">Bicolor</a></p>
+					<p><a href="gallery.html">All our roses</a></p>
 
 				</div>
-				<!-- Grid column -->
-
-				<!-- Grid column -->
-				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Your Account</a></p>
-					<p><a href="#!">Become an Affiliate</a></p>
-					<p><a href="#!">Shipping Rates</a></p>
-					<p><a href="#!">Help</a></p>
-
-				</div>
-				<!-- Grid column -->
 
 				<!-- Grid column -->
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
 					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Contact</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-					<p> <i class="fas fa-envelope mr-3"></i> info@bella.com</p>
-					<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-					<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
 
+					<h6 class="text-uppercase font-weight-bold">Contact</h6>
+					<hr class="deep-purple accent-2 mb- mt-0 d-inline-block mx-auto" style="width: 60px;">
+					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp; &nbsp;Doral-Fl 33172
+					</p>
+					<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
+					<p><i class="fa fa-phone-square"></i> US + 305-900-3793 </p>
+					<p><i class="fa fa-phone-square"></i> COL + 57 315 6944600</p>
 				</div>
 				<!-- Grid column -->
 
@@ -231,14 +206,11 @@
 		<!-- Copyright -->
 		<div class="footer__section">
 			<div class="container">
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				<div class="footer__copyright__text">
-					<p>BellaFlowers &copy; <script>
+					<p>Bella Flowers &copy; <script>
 							document.write(new Date().getFullYear());
-						</script> All rights reserved | This template is made with <i class="fa fa-heart"
-							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
+						</script> All rights reserved</p>
 				</div>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
 		</div>
 		<!-- Copyright  -->
