--- a/gallery3.html
+++ b/gallery3.html
@@ -13,11 +13,6 @@
 	<link rel="stylesheet" href="css/slicknav.min.css" />
 	<link rel="stylesheet" href="css/fresco.css" />
 	<link rel="stylesheet" href="css/gallery.css" />
-
-	<link rel="stylesheet" href="css/magnific-popup.css" />
-	<link rel="stylesheet" href="css/owl.carousel.min.css" />
-
-
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
 
@@ -63,14 +58,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red & Coral</a></li>
-							<li><a href="./gallery2.html">White Roses</a></li>
-							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Yellow & Orange</a></li>
-							<li><a href="./gallery5.html">Green</a></li>
-							<li><a href="./gallery6.html">Lavender</a></li>
-							<li><a href="./gallery7.html">Bicolor</a></li>
-							<li><a href="./gallery8.html">Tinted</a></li>
+							<li><a href="./gallery1.html"> • Red & Coral</a></li>
+							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html"> • Green</a></li>
+							<li><a href="./gallery6.html"> • Lavender</a></li>
+							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -266,126 +261,110 @@
 		</div>
 		<!-- About Page end -->
 
-		<!-- Footer -->
-		<footer class="page-footer font-small unique-color-dark">
+<!-- Footer -->
+<footer class="page-footer font-small unique-color-dark">
 
-			<div style="background-color: #252525;">
-				<div class="container">
+	<div style="background-color: #252525;">
+		<div class="container">
 
-					<!-- Grid row-->
-					<div class="row py-4 d-flex align-items-center">
+			<!-- Grid row-->
+			<div class="row py-4 d-flex align-items-center">
 
-						<!-- Grid column -->
-						<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-							<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
-						</div>
-						<!-- Grid column -->
-						<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
+				<!-- Grid column -->
+				<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+					<h6 class="mb-0 text-white">Get connected with us on social networks!</h6>
+				</div>
+				<!-- Grid column -->
+				<div class="lead col-md-6 text-white col-lg-7 text-center text-md-right">
 
-							<!-- Facebook -->
-							<a class="fb-ic">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-							</a>
-							<!-- Twitter -->
-							<a class="tw-ic">
-								<a href="#"><i class="fa fa-twitter"></i></a>
-							</a>
-							<!--Instagram-->
-							<a class="ins-ic">
-								<a href="#"><i class="fa fa-instagram"></i></a>
-							</a>
+					<!-- Facebook -->
+					<a class="fb-ic">
+						<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+					</a>
+					<!--Instagram-->
+					<a class="ins-ic">
+						<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+					</a>
 
-						</div>
-						<!-- Grid column -->
-
-					</div>
-					<!-- Grid row-->
+					<a class="ins-ic">
+						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+								class="fa fa-linkedin-square"></i></a>
+					</a>
 
 				</div>
-			</div>
-
-			<!-- Footer Links -->
-			<div class="container text-center text-md-left mt-5">
-
-				<!-- Grid row -->
-				<div class="row mt-3">
-
-					<!-- Grid column -->
-					<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-
-						<!-- Content -->
-						<h6 class="text-uppercase font-weight-bold">BellaFlowers</h6>
-						<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-						<p>BellaFlowers is a wonderful company where people and flowers bloom.</p>
-
-					</div>
-					<!-- Grid column -->
-
-					<!-- Grid column -->
-					<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-
-						<!-- Links -->
-						<h6 class="text-uppercase font-weight-bold">Products</h6>
-						<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-						<p><a href="#!">Red Roses</a></p>
-						<p><a href="#!">Pink Roses</a></p>
-						<p><a href="#!">Yellow Roses</a></p>
-						<p><a href="#!">Eco Roses</a></p>
-
-					</div>
-					<!-- Grid column -->
-
-					<!-- Grid column -->
-					<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-						<!-- Links -->
-						<h6 class="text-uppercase font-weight-bold">Useful links</h6>
-						<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-						<p><a href="#!">Your Account</a></p>
-						<p><a href="#!">Become an Affiliate</a></p>
-						<p><a href="#!">Shipping Rates</a></p>
-						<p><a href="#!">Help</a></p>
-
-					</div>
-					<!-- Grid column -->
-
-					<!-- Grid column -->
-					<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-						<!-- Links -->
-						<h6 class="text-uppercase font-weight-bold">Contact</h6>
-						<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-						<p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-						<p> <i class="fas fa-envelope mr-3"></i> info@bella.com</p>
-						<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-						<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-
-					</div>
-					<!-- Grid column -->
-
-				</div>
-				<!-- Grid row -->
+				<!-- Grid column -->
 
 			</div>
-			<!-- Footer Links -->
+			<!-- Grid row-->
 
-			<!-- Copyright -->
-			<div class="footer__section">
-				<div class="container">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					<div class="footer__copyright__text">
-						<p>Bella Flowers &copy; <script>
-								document.write(new Date().getFullYear());
-							</script> All rights reserved | This template is made with <i class="fa fa-heart"
-								aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a></p>
-					</div>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				</div>
+		</div>
+	</div>
+
+	<!-- Footer Links -->
+	<div class="container text-center text-md-left mt-5">
+
+		<!-- Grid row -->
+		<div class="row mt-3">
+
+			<!-- Grid column -->
+			<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+				<!-- Content -->
+				<h6 class="text-uppercase font-weight-bold">Bella Flowers</h6>
+				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+				<p>We are the wonderful company where people and flowers bloom.</p>
+
 			</div>
-			<!-- Copyright  -->
+			<!-- Grid column -->
 
-		</footer>
-		<!-- Footer  End-->
+			<!-- Grid column -->
+			<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+				<!-- Links -->
+				<h6 class="text-uppercase font-weight-bold">Products</h6>
+				<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+				<p><a href="gallery1.html">Red roses</a></p>
+				<p><a href="gallery4.html">Yellow roses</a></p>
+				<p><a href="gallery7.html">Bicolor</a></p>
+				<p><a href="gallery.html">All our roses</a></p>
+
+			</div>
+
+			<!-- Grid column -->
+			<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+				<!-- Links -->
+
+				<h6 class="text-uppercase font-weight-bold">Contact</h6>
+				<hr class="deep-purple accent-2 mb- mt-0 d-inline-block mx-auto" style="width: 60px;">
+				<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp; &nbsp;Doral-Fl 33172
+				</p>
+				<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
+				<p><i class="fa fa-phone-square"></i> US + 305-900-3793 </p>
+				<p><i class="fa fa-phone-square"></i> COL + 57 315 6944600</p>
+			</div>
+			<!-- Grid column -->
+
+		</div>
+		<!-- Grid row -->
+
+	</div>
+	<!-- Footer Links -->
+
+	<!-- Copyright -->
+	<div class="footer__section">
+		<div class="container">
+			<div class="footer__copyright__text">
+				<p>Bella Flowers &copy; <script>
+						document.write(new Date().getFullYear());
+					</script> All rights reserved</p>
+			</div>
+		</div>
+	</div>
+	<!-- Copyright  -->
+
+</footer>
+<!-- Footer  End-->
 
 		<!--====== Javascripts & Jquery ======-->
 		<script src="js/vendor/jquery-3.2.1.min.js"></script>
@@ -397,14 +376,10 @@
 
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.slicknav.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
 		<script src="js/circle-progress.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
 		<script src="js/instafeed.min.js"></script>
 		<script src="js/masonry.pkgd.min.js"></script>
-		<!-- <script src="js/gallery.js"></script> -->
 		<script src="js/gallery1.js"></script>
 
 
