--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red & Coral</a></li>
-							<li><a href="./gallery2.html">White Roses</a></li>
-							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
-							<li><a href="./gallery5.html">Green</a></li>
-							<li><a href="./gallery6.html">Lavender</a></li>
-							<li><a href="./gallery7.html">Bicolor</a></li>
-							<li><a href="./gallery8.html">Tinted</a></li>
+							<li><a href="./gallery1.html"> • Red & Coral</a></li>
+							<li><a href="./gallery2.html"> • White Roses</a></li>
+							<li><a href="./gallery3.html"> • Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html"> • Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html"> • Green</a></li>
+							<li><a href="./gallery6.html"> • Lavender</a></li>
+							<li><a href="./gallery7.html"> • Bicolor</a></li>
+							<li><a href="./gallery8.html"> • Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -88,10 +88,11 @@
 				</ol><!-- /.carousel-indicators -->
 				
 				<div class="carousel-inner">
+					<h1 class="text-center mb-5">Welcome to Bella Flowers!</h1>
 					<div class="carousel-item active">
 						<img class="d-block img-fluid" src="img/hero-slider/11.jpg" alt="">
 						<div class="carousel-caption d-none d-md-block text-white">
-							<h1>Welcome to Bella Flowers!</h1>
+							<h2>A world of roses</h2>
 						</div>
 					</div>
 					<div class="carousel-item">
@@ -105,7 +106,6 @@
 						<img class="d-block img-fluid" src="img/hero-slider/33.jpg" alt="">
 						<div class="carousel-caption d-none d-md-block text-white">
 							<h2>Commitment to quality and environment</h2>
-							<p>Rainforest & SEDEX - SMETA Certified</p>
 						</div>
 					</div>
 					<div class="carousel-item">
@@ -130,7 +130,7 @@
 
 
 	<!-- <section class=" hero__section blog__single__page"> -->
-	<div>
+	<!-- <div>
 		<div class="blog__slider">
 			<div class="blog__slider__item">
 				<img src="img/hero-slider/1.jpg" alt="slider image">
@@ -166,7 +166,7 @@
 		</div>
 
 
-	</div>
+	</div> -->
 	<!-- </section> -->
 
 	<article class="blog__article">
@@ -175,7 +175,7 @@
 				<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
 			</div>
 			<blockquote>
-				<P>Bella Flowers is the wonderful company where people and flowers bloom.</P>
+				<P> We Bella Flowers,  are the wonderful company where people and flowers bloom.</P>
 				<h4>José Luis Suárez</h4>
 				<h5>FOUNDER</h5>
 			</blockquote>
@@ -184,7 +184,7 @@
 
 
 	<div class="container justify-content-center text-center">
-		<a class="btn btn-md ml-0 text-white" href="gallery.html" role="button" style="background-color: #ff0089;">Go to
+		<a class="btn btn-md ml-0 text-white" href="gallery.html" role="button" style="background-color: #d10974;">Go to
 			Gallery</a>
 	</div>
 
@@ -209,7 +209,7 @@
 						Our farms are certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, We are commited to the environment and the well-being of our employees.</p>
 
 					<a class="btn btn-md ml-0 text-white" href="about.html" role="button"
-						style="background-color: #ff0089;">Show more</a>
+						style="background-color: #d10974;">Show more</a>
 
 				</div>
 				<!--Grid column-->
@@ -255,15 +255,11 @@
 
 						<!-- Facebook -->
 						<a class="fb-ic">
-							<a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
 						</a>
-						<!-- Twitter -->
-						<!-- <a class="tw-ic">
-							<a href="#"><i class="fa fa-twitter"></i></a>
-						</a> -->
 						<!--Instagram-->
 						<a class="ins-ic">
-							<a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 						</a>
 
 						<a class="ins-ic">
@@ -309,21 +305,6 @@
 					<p><a href="gallery.html">All our roses</a></p>
 
 				</div>
-				<!-- Grid column -->
-
-				<!-- Grid column -->
-				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-					<!-- Links -->
-					<h6 class="text-uppercase font-weight-bold">Useful links</h6>
-					<hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><a href="#!">Your Account</a></p>
-					<p><a href="#!">Become an Affiliate</a></p>
-					<p><a href="#!">Shipping Rates</a></p>
-					<p><a href="#!">Help</a></p>
-
-				</div>
-				<!-- Grid column -->
 
 				<!-- Grid column -->
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -335,8 +316,8 @@
 					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp; &nbsp;Doral-Fl 33172
 					</p>
 					<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
-					<p><i class="fa fa-phone-square"></i> + 305-900-3793 </p>
-					<p><i class="fa fa-phone-square"></i> + 57 305-900-3793</p>
+					<p><i class="fa fa-phone-square"></i> US + 305-900-3793 </p>
+					<p><i class="fa fa-phone-square"></i> COL + 57 315 6944600</p>
 				</div>
 				<!-- Grid column -->
 
@@ -349,17 +330,11 @@
 		<!-- Copyright -->
 		<div class="footer__section">
 			<div class="container">
-				<!--- Template is licensed under CC BY 3.0. -->
 				<div class="footer__copyright__text">
 					<p>Bella Flowers &copy; <script>
 							document.write(new Date().getFullYear());
 						</script> All rights reserved</p>
-
-					<!-- <a>  | This template is made with <i class="fa fa-heart"
-							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a> -->
-
 				</div>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
 		</div>
 		<!-- Copyright  -->
